[package]
name = "systemtest-ggcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdlimit = "0.2.1"
num_cpus = "1.15.0"
parking_lot = "0.12.1"
rand = "0.8.5"
simple-process-stats = "1.0.0"
structopt = "0.3.26"
sysinfo = "0.27.7"
tokio = { version = "1.24.2", features = ["full"] }
